istio-feature-gating-demo/gatekeeper/constrainttemplates/proxy-sidecar-annotations/block-proxy-sidecar-annotations.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Block Pods and Deployments with disallowed annotations.
  name: blockproxysidecarannotations
spec:
  crd:
    spec:
      names:
        kind: BlockProxySidecarAnnotations
      validation:
        openAPIV3Schema:
          type: object
          properties:
            disallowedAnnotations:
              description: Disallowed resource annotations.
              items:
                type: string
              type: array
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package istio.security.workloadpolicyannotations

      disallowed_annotations := input.parameters.disallowedAnnotations

      violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          pod := input.review.object
          pod.metadata.annotations[key]
          key in disallowed_annotations
          msg := sprintf("The annotation %v: is disallowed. List of disallowed annotations: %v", [key, disallowed_annotations])
      }

      violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"
          pod := input.review.object.spec.template
          pod.metadata.annotations[key]
          key in disallowed_annotations
          msg := sprintf("The annotation %v: is disallowed. List of disallowed annotations: %v", [key, disallowed_annotations])
      }
